feat(@notadd/scss): change material icon font url

--- a/src/@notadd/scss/partials/_icons.scss
+++ b/src/@notadd/scss/partials/_icons.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.loli.net/icon?family=Material+Icons");
+@import url("https://fonts.font.im/icon?family=Material+Icons");
 
 // Notadd logo
 @import "../icons/notadd-icons";
