feat(app/layout): add box-shadow for mat-sidenav in layout components

--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -23,6 +23,10 @@ layout {
             min-height: 0;
             min-width: 0;
 
+            > .mat-sidenav{
+                box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.35);
+            }
+
             /* Sidenav content */
             > .mat-sidenav-content {
                 position: relative;
