fix(applications/roles): fix mat-paginator length error when build

--- a/src/app/main/applications/roles-permissions/roles/roles.component.html
+++ b/src/app/main/applications/roles-permissions/roles/roles.component.html
@@ -112,7 +112,7 @@
             </mat-table>
 
             <mat-paginator #paginator
-                           [length]="dataSource.length"
+                           [length]="dataSource.data.length"
                            [pageIndex]="0"
                            [pageSize]="10"
                            [pageSizeOptions]="[5, 10, 25, 100]">
