fix(@notadd/components): fix Type 'specified' is not assignable to type 'AbstractControl'.

--- a/src/@notadd/components/table-export/table-export-picker.component.html
+++ b/src/@notadd/components/table-export/table-export-picker.component.html
@@ -18,7 +18,7 @@
                 </mat-radio-button>
                 <mat-radio-button value="specified">
                     <mat-form-field>
-                        <input matInput formControlName="length" (focus)="type = 'specified'" placeholder="例如：1-5、8、11-13,16" autocomplete="off">
+                        <input matInput formControlName="length" (focus)="onLengthFocus()" placeholder="例如：1-5、8、11-13,16" autocomplete="off">
                     </mat-form-field>
                 </mat-radio-button>
             </mat-radio-group>
