fix(app/loyout): modify menu button display conditions for toolbar component

--- a/src/app/layout/components/toolbar/toolbar.component.html
+++ b/src/app/layout/components/toolbar/toolbar.component.html
@@ -3,19 +3,20 @@
     <mat-toolbar-row>
         <div fxFlex fxFlexFill fxLayout="row" fxLayoutAlign="start center">
 
-            <div class="navbar-logo" fxHide.xs *ngIf="rightNavbar || hiddenNavbar">
+            <div class="navbar-logo" fxLayout="row" fxLayoutAlign="start center" fxHide.xs *ngIf="rightNavbar || hiddenNavbar">
                 <div class="ml-16">
                     <mat-icon class="logo secondary-text" fontSet="NotaddIcon" fontIcon="icon-logo" aria-hidden="true"></mat-icon>
                 </div>
+                <div class="toolbar-separator" fxHide.xs></div>
             </div>
 
             <button mat-icon-button
-                    *ngIf="!rightNavbar"
+                    *ngIf="(!hiddenNavbar && !rightNavbar) || isMobile"
                     class="navbar-toggle-button"
                     (click)="onMenuButtonClick()">
                 <mat-icon class="secondary-text" *ngIf="isMobile; else notMobile">{{hiddenNavbar ? 'menu' : 'close'}}</mat-icon>
                 <ng-template #notMobile>
-                    <mat-icon *ngIf="!hiddenNavbar" class="secondary-text">menu</mat-icon>
+                    <mat-icon class="secondary-text">menu</mat-icon>
                 </ng-template>
             </button>
             <button mat-icon-button
@@ -68,7 +69,7 @@
 
             <!-- right menu -->
             <button mat-icon-button
-                    *ngIf="rightNavbar"
+                    *ngIf="rightNavbar && !hiddenNavbar"
                     class="toolbar-button"
                     (click)="toggleSidenavCollapsed()">
                 <mat-icon class="secondary-text">menu</mat-icon>
