--- a/src/@notadd/scss/mixins/_icon-size.scss
+++ b/src/@notadd/scss/mixins/_icon-size.scss
@@ -12,10 +12,10 @@
 }
 
 @mixin mat-icon-size($size: 24px) {
-    font-size: $size;
-    height: $size;
-    width: $size;
-    min-width: $size;
-    min-height: $size;
-    line-height: $size;
+    font-size: $size !important;
+    height: $size !important;;
+    width: $size !important;;
+    min-width: $size !important;;
+    min-height: $size !important;;
+    line-height: $size !important;;
 }
