--- a/src/@notadd/components/navigation/nav-collapse/nav-collapse.component.html
+++ b/src/@notadd/components/navigation/nav-collapse/nav-collapse.component.html
@@ -37,14 +37,14 @@
                                 mat-menu-item
                                 [matMenuTriggerFor]="subMenu"
                                 (mouseenter)="setSubMenu(item);"
-                                [translate]="item.i18n">{{item.title}}</button>
+                                [translate]="item.i18n"></button>
 
                         <button *ngIf="!item.children"
                                 mat-menu-item
                                 [routerLink]="item.url"
                                 [routerLinkActive]="['active', 'mat-accent-bg']"
                                 matRipple
-                                [translate]="item.i18n">{{item.title}}</button>
+                                [translate]="item.i18n"></button>
                     </ng-container>
                 </ng-template>
             </div>
@@ -67,7 +67,7 @@
 
     <ng-template #itemContent>
         <mat-icon class="nav-link-icon" *ngIf="item.icon">{{item.icon}}</mat-icon>
-        <span class="nav-link-title" [translate]="item.i18n">{{item.title}}</span>
+        <span class="nav-link-title" [translate]="item.i18n"></span>
         <span class="nav-link-badge" *ngIf="item.badge"
               [ngStyle]="{'background-color': item.badge.bg,'color': item.badge.fg}">
             {{item.badge.title}}
